--- a/src/components/home-folder/home.css
+++ b/src/components/home-folder/home.css
@@ -1,3 +1,8 @@
+html{
+  min-height: 100%;
+  height: auto;
+}
+
 div {
     height: 300px;
 }
@@ -6,7 +11,7 @@ div {
 .topnav {
     background-color: rgb(69, 134, 240);
     overflow: hidden;
-    height: 28%;
+    height: 17%;
   }
   
   /* Style the links inside the navigation bar */
@@ -32,45 +37,91 @@ div {
   }
 
   body {
-    background-color: rgb(32, 38, 54);
+    height: 220%;
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(to bottom, rgb(32, 38, 54), rgb(11, 16, 27));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: fill;
+  }
+
+  .home-chunk {
+    margin: 150px;
   }
 
   .title {
+    position: absolute;
+    top: 50%;
     font-size: 300%;
     color: floralwhite;
+    padding: 2%;
   }
 
   .home-text {
     color: floralwhite;
     position: absolute;
+    line-height: 4.0;
     right: 7%;
+    top: 50%;
     width: 40%;
     padding: 2%;
     text-align: center;
+    display: inline-flex;
   }
 
   .start-button {
     position: absolute;
-    float: right;
+    top: 50%;
+    right: 10%;
+    height: 300px;
+    padding: 12%;
 
+  }
+  .about1-chunk {
+    margin-bottom: auto;
   }
 
   .about-title {
+    position: absolute;
     color: floralwhite;
+    display: block;
+    top: 675px;
+    margin-left: 1%;
+    height: 300px;
   }
 
   .about1-text {
     color: floralwhite;
+    padding: 4%;
+    top: 1000px;
+    flex-wrap: wrap;
+    position: absolute;
+  }
+
+  .about2-chunk {
+    margin-bottom: 1500px;
+    margin-top: auto;
   }
 
   .about-quote {
     color: floralwhite;
+    position: absolute;
+    top: 1250px;
+    margin-left: 1%;
   }
 
   .about2-text {
     color: floralwhite;
+    position: absolute;
+    top: 1400px;
+    margin-top: 15px;
+    padding: 4%;
+    line-height: 25px;
   }
 
   .us-title {
     color: floralwhite;
+    position: absolute;
+    top: 1750px;
   }
